cdrkit (5:1.0~pre1-1) UNRELEASED; urgency=low

  * FIXME: 

  Before releasing, move the upstream-related bits to an entry in ../Changelog


  * The Big Fork to an independent project called cdrkit
    + using the last clearly stated GPLed versions of files from
      cdrtools-2.01.01a08 (closes: #353403, 372486
    + we play the upstream role now, using our patches and we like them
      (closes: #361450)
    + renamed relevant works to avoid claims of "potential defamation" or
      "damage of reputation", to not create a legal battlefield for
      Joerg Schilling and "his understanding of how GPL applies in German
      Urheberrecht" which was used to legitimate the "special clauses" in the
      source (closes: #350738)
    + custom CMake based build system used instead of the original one, since
      we understand it better (closes: #350739 and hopefully closes: #350254,
      reopen if not). It seems to be portable among the the plattforms
      supported by Debian, it needs a bit of work for porting to non-Linux
      plattforms, though.
  * removed most of the anti-linux2.6 FUD from program messages (unless beeing
    in verbose mode). Decent information about code modifications is okay,
    subtle propaganda isn't (closes: #377145)
  * changed default config file location to /etc/default/wodim
  * dropped the shm build (kernel 2.2 is history)
  * dropped dpatch integration, we are the upstream now
  * disabled debconf messages and device-creating code for now, things like
    hints to create device files are essential for only few people and can
    equaly be presented as program messages. Why shall we still MAKEDEV them?
    It's not like we have switched to kernel 2.0.1 yesterday 
    (closes: #342085, 188827, #200665)
  * long help output of wodim, mkisofs, cdda2wav goes to stdout IFF -help was
    used deliberately. No matter what JS claims to be "the Unix Tradition"
    (closes: #138490, #299641)