@@ -1,0 +1,2 @@
+usr/bin/wodim usr/bin/cdrecord
+usr/share/doc/wodim usr/share/doc/cdrecord
