@@ -13,8 +13,6 @@ else
 COPTX += -O2
 endif
 
-#include /usr/share/dpatch/dpatch.make
-
 i=$(shell pwd)/debian/tmp/usr
 b=$(shell pwd)/debian/build
 iso=mkisofs
@@ -23,36 +21,7 @@ cdr=wodim
 ziso_VERSION = $(shell cat zisofs_tools/version)
 source_VERSION= $(shell dpkg-parsechangelog | sed -ne '/^Version:/s/^V.*://p')
 
-#ifeq ($(dvd),yes)
-#dvdclean=unapplydvd
-#dvdbuild=applydvd-stamp
-#endif
 
-#applydvd-stamp:
-#	@if test -e debian/patched/06_dautipps.dpatch ; then \
-#	debian/patches/06_dautipps.dpatch -unpatch && \
-#	rm -f debian/patched/06_dautipps.dpatch; \
-#	fi
-#	@if test -e debian/patched/07_noadvertising.dpatch ; then \
-#	debian/patches/07_noadvertising.dpatch -unpatch && \
-#	rm -f debian/patched/07_noadvertising.dpatch; \
-#	fi
-#	@if test -e debian/patched/17_argv0_beautify.dpatch ; then \
-#	debian/patches/17_argv0_beautify.dpatch -unpatch && \
-#	rm -f debian/patched/17_argv0_beautify.dpatch; \
-#	fi
-#	@chmod +x debian/patches/07_dvdsup.dpatch && \
-#	debian/patches/07_dvdsup.dpatch -patch && \
-#	touch applydvd-stamp
-#
-#unapplydvd:
-#	@if test -e applydvd-stamp ; then \
-#	chmod +x debian/patches/07_dvdsup.dpatch ; \
-#	debian/patches/07_dvdsup.dpatch -unpatch ; \
-#	rm -f applydvd-stamp ; \
-#	fi
-
-#build: patch $(dvdbuild) build-debstamp
 build: build-debstamp
 build-debstamp:
 #	@if test -f ../cdrkit_$(source_VERSION).tar.gz ; then \
@@ -66,11 +35,10 @@ build-debstamp:
 #	echo "#define ZISOFS_TOOLS_VERSION \"$(ziso_VERSION)\"" > zisofs_tools/version.h
 	touch build-debstamp
 
-clean: unpatch $(dvdclean)
+clean:
 	@echo "--- Cleaning"
 	dh_testdir
 	dh_testroot
-	-rm -rf debian/patched
 	-rm -rf wodim-1.8.1_de-doc_0.1
 	-./.clean
 	rm -f build-debstamp install-debstamp conf/config.sub conf/config.guess
@@ -94,7 +62,7 @@ install-debstamp:
 	dh_testroot
 	dh_clean
 	rm -rf $(b)
-	# Fixate the target dir in the cahced settings
+# Fixate the target dir in the cahced settings
 	cmake -DCMAKE_INSTALL_PREFIX:PATH=$(i) build
 	make install
 
@@ -131,9 +99,6 @@ wodim: install
 	cp -a cdrecord/wodim.dfl $(b)/$@/etc/default/wodim
 	cp -a rscsi/rscsi.dfl $(b)/$@/etc/default/rscsi
 #	cp debian/reportbug.presubj $(b)/$@/usr/share/bug/wodim/presubj
-#ifeq ($(dvd),yes)
-#	install -m755 debian/dvd.reportbug $(b)/$@/usr/share/bug/wodim/script
-#endif
 	dh_link              -p$@ -P$(b)/$@ 
 	dh_installdocs       -p$@ -P$(b)/$@
 	dh_installchangelogs -p$@ -P$(b)/$@ Changelog
